--- a/chatbot.ipynb
+++ b/chatbot.ipynb
@@ -70,7 +70,7 @@
         "from tenacity import retry, wait_random_exponential, stop_after_attempt\n",
         "\n",
         "GPT_MODEL = \"gpt-3.5-turbo-0613\"\n",
-        "openai.api_key = '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'"
+        "openai.api_key = ''"
       ],
       "metadata": {
         "id": "aqUPvddZsAMb"
